<resources>
    <string name="app_name">Zapy</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="zapy_text">Zapy</string>
    <string name="entrar_text">Entrar</string>
    <string name="cadastro_texto">Não tem conta? Cadastre-se agora</string>
    <string name="logo_text">logo</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="cadastrar_texto">Cadastrar</string>
    <string name="possuo_cadastro">Já possuo cadastro</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="config">Configurações</string>
    <string name="sair">Sair</string>
    <string name="conversas">Conversas</string>
    <string name="contatos">Contatos</string>
    <string name="nome">Nome</string>
    <string name="explicacao_usuario">Este é o nome que ficará visível para os seus contatos do Zapy.</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="title_activity_grupo_cadastro">GrupoCadastroActivity</string>
    <string name="texto_grupo">Defina um nome e uma imagem (opcional) para o grupo</string>

</resources>